--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,92 +1,3 @@
-<style>
-
-</style>
-<section class='container container-pad text-center'>
-
-  <h1 class='text-center p-3'>
-    Download Instagram Stories 
-  </h1>
-  <p class='text-center'>
-    Enter instagram username and download the stories of your favorite users before they get deleted.
-  </p>
-  <%= form_tag('/search', method: :get) do %>
-    <div class='form-group text-center tf-container d-flex flex-row'>
-      <div class=" w-100">
-      <%= text_field_tag :q, nil,placeholder:'Username', autocomplete:'off', class:'form-control text-center ig-search-pad'%>
-      </div>
-      <div class=" ">
-        <%= submit_tag 'Search', class:'btn btn-primary font-weight-bold ig-search-pad'%>
-      </div>
-    </div>
-  <% end %>
-</section>
-<section class='container'>
-  <div class='row'>
-    <div class='col-sm-6'>
-      <%= image_tag('use_phone_2', class:'img-fluid', style:'max-width:600px; width:100%;') %>
-    </div>
-    <div class='col-sm-6'>
-      <h2 class='text-center'>
-        How to download Instagram Stories?
-      </h2>
-      <p class='text-center p-3'>
-        Simple way to download and save Instagram Stories and Stories Highlights photos and videos to your PC, Mac, Phone. 
-      </p>
-      <p>
-        To Download Instagram Stories simply enter Instagram username and go.
-      </p>
-    </div>
-  </div>
-  
-  <div class='row container-pad'>
-    <div class='col-sm-6'>
-      <h2 class=''>
-        Advantages
-      </h2>
-      <ul>
-        <li>
-          You do need to sign up
-        </li>
-        <li>
-          You do not need to install anything 
-        </li>
-        <li>
-          Support for download Stories Highlights
-        </li>
-        <li>
-          Easy and Simple to use
-        </li>
-      </ul>
-    </div>
-    <div class='col-sm-6'>
-      <h2 class=''>
-        When to use
-      </h2>
-      <ul>
-        <li>
-          Download and save an amazing story
-        </li>
-        <li>
-          Share the stories in different social networks
-        </li>
-        <li>
-          View the stories of a user anonymously
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class='row p-3'>
-    <h1>
-      What is instagram?
-    </h1>
-    <p>
-      Instagram is a free photo and video sharing app available on Apple iOS, Android and Windows Phone. People can upload photos or videos to our service and share them with their followers or with a select group of friends. They can also view, comment and like posts shared by their friends on Instagram.
-    </p>
-    <h1>
-      What are instagram stories?
-    </h1>
-    <p>
-      Instagram stories is a feature on Instagram that allows users to post photos or videos that vanish after 24 hours. When a user shares a story, it is ephemeral meaning it can’t be viewed once 24 hours have elapsed. If you’re trying to download an Instagram story that one of your friends or favorite celebrity has posted there is no way to do it on Instagram.
-    </p>
-  </div>
-</section>
+<%= render 'users/main/search_field'%>
+<%= render 'pages/main/how_to_download' %>
+<%= render 'pages/main/why_use_insta' %>
