--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,21 +1,102 @@
-<section class='container container-pad text-center'>
-  <h1 class='text-center p-3'>
-    Download Instagram Stories 
-  </h1>
-  <p class='text-center'>
-    Enter instagram username and download the stories of your favorite users before they get deleted.
-  </p>
-  <%= form_tag('/search', method: :get) do %>
-    <div class='form-group text-center tf-container d-flex flex-row'>
-      <div class=" w-100">
-      <%= text_field_tag :q, params[:q] ||= '',placeholder:'Username', autocomplete:'off', class:'form-control text-center ig-search-pad'%>
+<style>
+  .img-thumb {
+    border-radius:10em;
+  }
+  .ig-verified {
+    background-color:#3897f0;
+    border-radius:4em;
+    color:#FFF;
+    padding:3px;
+    font-size:0.8em;
+  }
+  
+  .story-index {
+    max-width: 900px;
+    margin:0 auto;
+    position:relative;
+  }
+  
+  .story-index a {
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+  }
+  
+  .story-index.list:hover .user-text-container, .story-index.list:hover .user-text-container span.text-dark, .story-index.list:hover .user-text-container span.text-muted {
+    text-decoration:underline;
+    color:#2980b9 !important;
+  }
+  
+  .pt-12 {
+    padding-top:12px;
+  }
+  .text-lh-1-2 {
+    line-height:1.2
+  }
+  .user-text-container {
+    padding:30px 10px 0px 10px;
+  }
+  
+</style>
+<%= render 'users/main/search_field'%>
+<%= render 'users/main/index' %>
+<section class='container' >
+
+  <%= render 'users/main/response1' %>
+  
+  <div class='d-flex story-index list'>
+    <%= link_to '', "/stories/#{@response['user']['username']}" %>
+    <div class='p-2'>
+      <%= image_tag(@response['user']['profile_pic_url'], class:'img-fluid img-thumb') %>
+    </div>
+    <div class='w-100 user-text-container'>
+      <div class='text-lh-1-2'>
+        <span class='font-weight-bold text-dark' style='font-size:1.2em;'><%=@response['user']['username']%></span> 
+        <% if @response['user']['is_verified'] == true %>
+          <span class='ig-verified'><%= fa_icon "check"%></span>
+        <% end %>
+        <br>
+        <span class='text-muted'><%=@response['user']['full_name']%></span>
       </div>
-      <div class=" ">
-        <%= submit_tag 'Search', class:'btn btn-primary font-weight-bold ig-search-pad'%>
+      <div>
+        <% if @response['user']['is_private'] == true%>
+        <span style='font-size:0.8em'>private</span>
+        <% end %>
+      </div>
+      <div class='pt-12'>
+        <% @time = ((Time.now.to_i - @response['items'][0]['taken_at'])/3600) %>
+        <strong>
+          <%= @response['items'].count == 1 ? "#{@response['items'].count} story" : "#{@response['items'].count} stories"  %>.
+        </strong> 
+        Last story was added about <%= time_passed(@time) %> ago
+      </div>
+      <div class=''>
+        <%= @highlights["tray"].count == 1 ? "1 highlight" : "#{@highlights["tray"].count} highlights"  %>
       </div>
     </div>
-  <% end %>
-</section>
-<section class='container container-pad'>
-
+    
+  </div>
+  <div class='story-index container-pad'>
+    <h1 class='text-center'>
+      Stories Highlights
+    </h1>
+    <% @time = ((Time.now.to_i - @highlights['tray'][0]['latest_reel_media'])/3600) %>
+    <% @highlights['tray'].each do |highlight| %>
+      <div class='d-flex story-index list'>
+        <%= link_to '', "/highlights/#{highlight['id'].split('highlight:')[1]}" %>
+        <div class='p-2'>
+          <%= image_tag(highlight['cover_media']['cropped_image_version']['url'], class:'img-fluid img-thumb')  %>
+        </div>
+        <div class='w-100 user-text-container'>
+          <div class='text-lh-1-2'>
+            <span class='font-weight-bold text-dark' style='font-size:1.2em;'><%=highlight['title']%></span>.
+            <span class='text-muted'><%=time_passed(@time)%></span> Ago
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  
 </section>
