--- a/app/views/pages/main/_how_to_download.html.erb
+++ b/app/views/pages/main/_how_to_download.html.erb
@@ -1,7 +1,7 @@
 <section class='container'>
   <div class='row'>
     <div class='col-sm-6'>
-      <%= image_tag('use_phone_2', class:'img-fluid', style:'max-width:600px; width:100%;') %>
+      <%= image_tag('use_phone_2.jpeg', class:'img-fluid', style:'max-width:600px; width:100%;') %>
     </div>
     <div class='col-sm-6'>
       <h2 class='text-center'>
