--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    <%= render 'layouts/main/nav'%>
+    <header class='header'>
+      <%= render 'layouts/main/nav'%>
+    </header>
     <% flash.each do |key, value| %>
       <%= content_tag :div, value, class: "flash #{key}" %>
     <% end %>
