update error handling

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -29,7 +29,10 @@
   background-color:#ccc;
   color:#2980b9 !important;
 }
-
+section .ig-search-pad {
+  font-size:1em;
+  height:50px;
+}
 .pt-12 {
   padding-top:12px;
 }
