--- a/app/views/users/main/_search_field.html.erb
+++ b/app/views/users/main/_search_field.html.erb
@@ -1,5 +1,4 @@
 <section class='container container-pad text-center'>
-
   <h1 class='text-center p-3'>
     Download Instagram Stories 
   </h1>
@@ -11,7 +10,7 @@
       <div class=" w-100">
       <%= text_field_tag :q, params[:q] ||=nil,placeholder:'Username', autocomplete:'off', class:'form-control text-center ig-search-pad'%>
       </div>
-      <div class=" ">
+      <div class="search-box">
         <%= submit_tag 'Search', class:'btn btn-primary font-weight-bold ig-search-pad'%>
       </div>
     </div>
