--- a/app/views/layouts/main/_nav.html.erb
+++ b/app/views/layouts/main/_nav.html.erb
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <%= link_to 'https://storiesig.com/', class:'nav-link' do %>
-             Stories IG
+          <%= link_to 'https://moatechnologies.herokuapp.com', class:'nav-link' do %>
+             <%= fa_icon('code',text: "MOA Technologies")%>
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to '#', class:'nav-link' do %>
-             Contact
+             <%= fa_icon('envelope',text: "Help")%>
           <% end %>
         </li>
         <li class='sm-pad'>
